Refactor the links.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -217,7 +217,7 @@ h6 {
 .navbar .getstarted:hover,
 .navbar .getstarted:focus:hover {
   color: #fff;
-  background: #8dc63f;
+  background: #0e76bca4;
 }
 
 .navbar .dropdown ul {
