--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -905,6 +905,24 @@ section {
 /*--------------------------------------------------------------
 # Services
 --------------------------------------------------------------*/
+.icon-box-3d {
+  /* box-shadow: 0px 0 25px 0 rgba(0, 0, 0, 0.1);
+  padding: 50px 30px; */
+  transition: all ease-in-out 0.4s;
+  background: #0e76bc;
+  color: #fff;
+  text-align: center;
+  width: 150px;
+  font-size: 80%;
+  margin-right: 7%;
+}
+.services {
+  padding: 2% 1.5% !important;
+}
+.image-box-3d {
+  height: 82px;
+  padding: 2% 1.5% !important;
+}
 .services .icon-box {
   box-shadow: 0px 0 25px 0 rgba(0, 0, 0, 0.1);
   padding: 50px 30px;
