--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -443,8 +443,8 @@ h6 {
 #hero h1 {
   margin: 0 0 10px 0;
   font-size: 48px;
-  font-weight: 700;
-  line-height: 56px;
+  font-weight: normal;
+  line-height: 45px;
   color: #000;
 }
 
@@ -460,10 +460,10 @@ h6 {
   font-size: 16px;
   letter-spacing: 1px;
   display: inline-block;
-  padding: 10px 28px 11px 28px;
+  padding: 3px 22px 6px 20px;
   border-radius: 50px;
   transition: 0.5s;
-  margin: 10px 0 0 0;
+  margin: 45px 0 0 0;
   color: #fff;
   background: #0e76bc;
 }
@@ -912,9 +912,12 @@ section {
   background: #0e76bc;
   color: #fff;
   text-align: center;
-  width: 150px;
-  font-size: 80%;
+  width: 193px;
+  font-size: 73%;
   margin-right: 7%;
+  padding-right: 0px;
+  padding-left: 0px;
+
 }
 .services {
   padding: 2% 1.5% !important;
