--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1813,7 +1813,7 @@ section {
 #footer .footer-top h4 {
   font-size: 16px;
   font-weight: bold;
-  color: #37517e;
+  color: #fff;
   position: relative;
   padding-bottom: 12px;
 }
