--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1729,6 +1729,27 @@ section {
   content: "/";
 }
 
+.button-2{
+  display: inline-block;
+  padding: 0px 15px;
+  border: none;
+  height: 50px;
+  line-height: 50px;
+  font-size: 20px;
+  text-decoration: none;
+  color: #000;
+  font-family: arial;
+  border-radius: 5px; /* Add rounded edges */
+  
+  img{
+    margin-right: 5px;
+    display: inline-block;
+    vertical-align: middle;
+    margin-top: -3px;
+  }
+}
+
+
 /*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
