--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1729,9 +1729,10 @@ section {
   content: "/";
 }
 
-.button-2{
+.contact-button{
+
   display: inline-block;
-  padding: 0px 15px;
+  padding: 0px 15% 0% 10%;
   border: none;
   height: 50px;
   line-height: 50px;
@@ -1739,8 +1740,10 @@ section {
   text-decoration: none;
   color: #000;
   font-family: arial;
-  border-radius: 5px; /* Add rounded edges */
-  
+  border-radius: 14px;
+  box-shadow: 16px 3px 27px rgba(10, 10, 10, .5);
+  width: 91%;
+  margin-bottom: 20px;
   img{
     margin-right: 5px;
     display: inline-block;
